--- a/RTL/Memory Management Units/ReadMe
+++ b/RTL/Memory Management Units/ReadMe
@@ -1,5 +1,7 @@
 The Memory Management Units (MMUs) translate the logical address space of OR1200 into physical address space as per the shown diagram below. The 36 bit logical address space is divided into couple of fields, like, bits 35-30 is the context id, bits 31-24 are the page index level 1, bits 23-13 are the page index level 2, bits 12-0 are the page offset. The context id, page index level fields are known as Virtual Page Number (VPN). The operation of address translation is shown below.
 
+<img src= "https://github.com/abdelazeem201/Layout-of-OR1200-based-SOC-implementation.-/blob/main/PICs/TLBOperationOR1200.png">
+
 Memory management unit provides a much bigger virtual address space for the programs to run in modern microprocessors. This virtual address space has an one to one mapping to the physical address space and MMU does the job of mapping it correctly. MMU internally translates the virtual address space to physical address space and usually uses a high speed cache memory called Translate Lookahead Buffer (TLB) to translate it faster. MMUs also provide the feature of memory protection of programs that was impossible without the concept of virtual memory. This ensures that one program's address space does not collide with the another one. In other words a program's access to the virtual memory space is well controlled in sucha way that that program does not write to another programs address space.
 On the other hand cache memory is fastest available memory that can run at the same speed as the CPU core itself. MMUs provide faster address translation from virtual to physical address space so that effectively read/write cycles are faster in the micro processors.
 As this class allows us to do a project using Synopsys cad tool, we try to do the full design of the OR1200 micro processor. In this big project our team plans to modify the OR1200 project code to generate the MMU soft-IPs and synthesize it in an actual technology to place and route the physical design of it with the TLBs themselves as hard macros.
